--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -14,19 +14,38 @@
 // Include common definitions from above.
 apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
+apply plugin: 'kotlin-android'
+//apply plugin: 'org.jetbrains.kotlin.android'
 
 android {
     namespace = 'org.firstinspires.ftc.teamcode'
+    androidResources {
+        noCompress 'tflite'
+    }
 
     packagingOptions {
+        jniLibs {
+            pickFirsts += ['**/*.so']
+        }
         jniLibs.useLegacyPackaging true
     }
 }
 
+repositories {
+    maven { url = 'https://maven.brott.dev/'}
+
+    mavenCentral()
+    mavenLocal()
+}
+
 dependencies {
     implementation project(':FtcRobotController')
+    // implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     annotationProcessor files('lib/OpModeAnnotationProcessor.jar')
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.21'
+    implementation 'org.openftc:easyopencv:1.7.0'
+    implementation 'org.ftclib.ftclib:core:2.1.1'
+    implementation "org.apache.commons:commons-math3:3.6.1"
+
+    implementation "com.acmerobotics.roadrunner:ftc:0.1.13"
 }
